# pageinfo-rs

./: .amc.toml  .gitignore  .tmuxp.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  notes.org  pageinfo_code.txt
.agents/skills/pginf/: SKILL.md
.github/workflows/: ci.yml  coverage.yml  publish.yml  tag.yml
skills/: pginf.md
specs/: cache.md  ctx.md  idea.md  ideas.md  overview.md  qa.md  workflow.md
src/: analyzer.rs  browser.rs  cache.rs  client.rs  help.rs  html.rs  http.rs  http_display.rs  httpreq.rs  lib.rs  main.rs  output.rs  resolve.rs  skills.rs  stand.rs  trackers.rs
src/analyzer/: aggregate.rs  date_kind.rs  error.rs  headings.rs  link.rs  meta_tag.rs  mod.rs  page_info.rs  sample_collector.rs  sample_options.rs  text.rs  url_facts.rs
src/cache/: error.rs  key.rs  store.rs  types.rs
tests/: httpreq_tests.rs
tests/data/: test_json.toml  test_post.toml  test_request.toml
