[package]
name = "pageinfo-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pginf"
path = "src/main.rs"

[lib]
name = "pageinfo_rs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.6"
comfy-table = "7.2.2"
dom-content-extraction = "0.3"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
# spider_chrome = "2.37"
# toml = "0.8"
# spider_fingerprint = "2.37"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2.5"
wreq = "5.3"
wreq-util = "2.2"
